# odoo-inventory-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
src/: __init__.py  config.py  odoo_client.py  server.py
src/analysis/: __init__.py  abc_xyz.py  forecasting.py  stock_levels.py  turnover.py
src/tools/: __init__.py  analysis.py  definitions.py  forecast.py  future_stock.py  lead_time.py  search.py  stock.py
